--- a/tablesoft-java/JSoft/Resumen_ActivoFijo_Categoria.jrxml
+++ b/tablesoft-java/JSoft/Resumen_ActivoFijo_Categoria.jrxml
@@ -8,7 +8,7 @@
 	<parameter name="Categoria_id" class="java.lang.Integer"/>
 	<parameter name="RUTA_GRAFICO" class="java.lang.String"/>
 	<queryString language="SQL">
-		<![CDATA[     SELECT A.total_categoria,
+		<![CDATA[SELECT A.total_categoria,
     B.total_retrasados
 FROM (SELECT count(*) AS total_categoria
       FROM ticket 
@@ -39,7 +39,7 @@ FROM (SELECT count(*) AS total_categoria
 				<textElement>
 					<font fontName="Arial" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Porcentaje de tickets demorados entre enviados: " + FIXED($F{total_retrasados}.doubleValue()/$F{total_categoria}.doubleValue()*100,2) +"%"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Porcentaje de tickets asociados a activo fijo entre enviados: " + FIXED($F{total_retrasados}.doubleValue()/$F{total_categoria}.doubleValue()*100,2) +"%"]]></textFieldExpression>
 			</textField>
 			<subreport>
 				<reportElement x="-20" y="15" width="565" height="200" uuid="d3fa76d1-d289-4dc7-9708-6f421b0929ab"/>
