--- a/tablesoft-java/JSoft/Resumen_Escalados_Urgencia.jrxml
+++ b/tablesoft-java/JSoft/Resumen_Escalados_Urgencia.jrxml
@@ -5,25 +5,25 @@
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="ConexionPixies"/>
 	<parameter name="FechaInicio" class="java.sql.Timestamp"/>
 	<parameter name="FechaFin" class="java.sql.Timestamp"/>
-	<parameter name="Categoria_id" class="java.lang.Integer"/>
+	<parameter name="Urgencia_id" class="java.lang.Integer"/>
 	<parameter name="RUTA_GRAFICO" class="java.lang.String"/>
 	<queryString language="SQL">
 		<![CDATA[SELECT 
     A.total_categoria,
     B.total_escalados
-FROM (SELECT count(*) AS total_categoria
+FROM (SELECT count(distinct ticket_id) AS total_categoria
       FROM ticket 
-      WHERE categoria_id = $P{Categoria_id}  
+      WHERE urgencia_id = $P{Urgencia_id}   
       AND fecha_envio > $P{FechaInicio}
       AND fecha_envio < $P{FechaFin} ) A,
       (select count(distinct ticket_id) as total_escalados
        from cambio_estado_ticket
        where ticket_id in (select ticket_id 
                            from ticket 
-                           WHERE categoria_id = $P{Categoria_id}  
+                           WHERE urgencia_id = $P{Urgencia_id}  
                             AND fecha_envio > $P{FechaInicio}
       AND fecha_envio < $P{FechaFin} )
-       and estado_id_to = 5) B;]]>
+       and estado_id_to = 3) B;]]>
 	</queryString>
 	<field name="total_categoria" class="java.lang.Long">
 		<property name="com.jaspersoft.studio.field.label" value="total_categoria"/>
@@ -35,7 +35,7 @@ FROM (SELECT count(*) AS total_categoria
 		<band splitType="Stretch"/>
 	</background>
 	<summary>
-		<band height="222" splitType="Stretch">
+		<band height="221" splitType="Stretch">
 			<textField>
 				<reportElement x="-20" y="-18" width="520" height="30" uuid="022ee06e-d556-47c2-be29-4c4987a40cf7">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="991649b9-73b3-4459-8c82-89f74fdb90f2"/>
@@ -43,21 +43,21 @@ FROM (SELECT count(*) AS total_categoria
 				<textElement>
 					<font fontName="Arial" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Porcentaje de tickets recategorizados entre enviados: " + FIXED($F{total_escalados}.doubleValue()/$F{total_categoria}.doubleValue()*100,2) +"%"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Porcentaje de tickets escalados entre enviados: " + FIXED($F{total_escalados}.doubleValue()/$F{total_categoria}.doubleValue()*100,2) +"%"]]></textFieldExpression>
 			</textField>
 			<subreport>
-				<reportElement x="-20" y="16" width="565" height="200" uuid="d3fa76d1-d289-4dc7-9708-6f421b0929ab"/>
+				<reportElement x="-20" y="15" width="565" height="200" uuid="d3fa76d1-d289-4dc7-9708-6f421b0929ab"/>
 				<subreportParameter name="FechaInicio">
 					<subreportParameterExpression><![CDATA[$P{FechaInicio}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="FechaFin">
 					<subreportParameterExpression><![CDATA[$P{FechaFin}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="Categoria_id">
-					<subreportParameterExpression><![CDATA[$P{Categoria_id}]]></subreportParameterExpression>
-				</subreportParameter>
 				<subreportParameter name="Total">
 					<subreportParameterExpression><![CDATA[$F{total_categoria}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Urgencia_id">
+					<subreportParameterExpression><![CDATA[$P{Urgencia_id}]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{RUTA_GRAFICO}]]></subreportExpression>
