--- a/tablesoft-java/JSoft/Grafico_Escalados_Urgencia.jrxml
+++ b/tablesoft-java/JSoft/Grafico_Escalados_Urgencia.jrxml
@@ -5,11 +5,11 @@
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<parameter name="FechaInicio" class="java.sql.Timestamp"/>
 	<parameter name="FechaFin" class="java.sql.Timestamp"/>
-	<parameter name="Categoria_id" class="java.lang.Integer"/>
+	<parameter name="Urgencia_id" class="java.lang.Integer"/>
 	<parameter name="Total" class="java.lang.Long"/>
 	<queryString>
 		<![CDATA[SELECT
-    'No recategorizados' as Nombre,
+    'No escalados' as Nombre,
     A.total_categoria as Cantidad
 FROM (SELECT count(T.ticket_id) - E.total_escalados AS total_categoria
       FROM ticket T,
@@ -17,25 +17,25 @@ FROM (SELECT count(T.ticket_id) - E.total_escalados AS total_categoria
              from cambio_estado_ticket
              where ticket_id in (select ticket_id 
                                  from ticket 
-                                 WHERE categoria_id = $P{Categoria_id}  
+                                 WHERE urgencia_id = $P{Urgencia_id}  
                                  and fecha_envio > $P{FechaInicio} 
                                  and fecha_envio <  $P{FechaFin} )
-             and estado_id_to = 5) E
-      WHERE T.categoria_id =   $P{Categoria_id} 
+             and estado_id_to = 3) E
+      WHERE T.urgencia_id =   $P{Urgencia_id} 
       AND T.fecha_envio > $P{FechaInicio}
       AND T.fecha_envio < $P{FechaFin}) A
 UNION ALL
 SELECT 
-    'Recategorizados' as Nombre,
+    'Escalados' as Nombre,
     B.total_escalados as Cantidad
 FROM (select count(distinct ticket_id) as total_escalados
        from cambio_estado_ticket
        where ticket_id in (select ticket_id 
                            from ticket 
-                           WHERE categoria_id =  $P{Categoria_id} 
+                           WHERE urgencia_id =  $P{Urgencia_id} 
                            and fecha_envio > $P{FechaInicio} 
                            and fecha_envio < $P{FechaFin})
-       and estado_id_to = 5) B]]>
+       and estado_id_to = 3) B]]>
 	</queryString>
 	<field name="Nombre" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="Nombre"/>
@@ -47,10 +47,12 @@ FROM (select count(distinct ticket_id) as total_escalados
 		<variableExpression><![CDATA[$F{Cantidad}.doubleValue()]]></variableExpression>
 	</variable>
 	<summary>
-		<band height="217">
+		<band height="214">
 			<pieChart>
 				<chart evaluationTime="Report">
-					<reportElement x="310" y="13" width="240" height="200" isPrintInFirstWholeBand="true" uuid="b603040c-ba8c-4433-9728-28e67b0142ca"/>
+					<reportElement x="310" y="12" width="240" height="200" isPrintInFirstWholeBand="true" uuid="b603040c-ba8c-4433-9728-28e67b0142ca">
+						<property name="net.sf.jasperreports.chart.range.axis.integer.unit" value="true"/>
+					</reportElement>
 					<chartTitle/>
 					<chartSubtitle/>
 					<chartLegend/>
@@ -73,7 +75,9 @@ FROM (select count(distinct ticket_id) as total_escalados
 			</pieChart>
 			<barChart>
 				<chart evaluationTime="Report">
-					<reportElement x="-1" y="13" width="281" height="200" uuid="f8f0f734-1e48-462f-b0f2-66ee0f8b66d1"/>
+					<reportElement x="-1" y="12" width="281" height="200" uuid="f8f0f734-1e48-462f-b0f2-66ee0f8b66d1">
+						<property name="net.sf.jasperreports.chart.range.axis.integer.unit" value="true"/>
+					</reportElement>
 					<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
 					<chartTitle/>
 					<chartSubtitle/>
@@ -103,11 +107,11 @@ FROM (select count(distinct ticket_id) as total_escalados
 				</barPlot>
 			</barChart>
 			<staticText>
-				<reportElement x="-1" y="-20" width="491" height="30" uuid="630207f6-57de-4508-83bc-55de4bb78a8c"/>
+				<reportElement x="-1" y="-20" width="460" height="30" uuid="160c264b-b966-498a-9267-c5441f03bae8"/>
 				<textElement>
 					<font fontName="Arial" size="12"/>
 				</textElement>
-				<text><![CDATA[Gráficos de tickets analizados distribuidos entre recategorizados y no recategorizados.]]></text>
+				<text><![CDATA[Gráficos de tickets analizados distribuidos entre escalados y no escalados.]]></text>
 			</staticText>
 		</band>
 	</summary>
