--- a/tablesoft-java/JSoft/Grafico_Tickets_Dia_Urgencia.jrxml
+++ b/tablesoft-java/JSoft/Grafico_Tickets_Dia_Urgencia.jrxml
@@ -5,29 +5,27 @@
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<parameter name="FechaInicio" class="java.sql.Timestamp"/>
 	<parameter name="FechaFin" class="java.sql.Timestamp"/>
-	<parameter name="Categoria_id" class="java.lang.Integer"/>
+	<parameter name="Urgencia_id" class="java.lang.Integer"/>
 	<queryString>
-		<![CDATA[select B.nombre, count(T.ticket_id) as cantidad
-from ticket T
-inner join biblioteca B
-on T.biblioteca_id = B.biblioteca_id
-where T.fecha_envio > $P{FechaInicio} 
-and T.fecha_envio < $P{FechaFin} 
-and T.categoria_id = $P{Categoria_id} 
-group by B.biblioteca_id;]]>
+		<![CDATA[select date(fecha_envio) as "Dia de Envio",
+    count(ticket_id)
+from ticket
+where urgencia_id = $P{Urgencia_id} 
+and fecha_envio > $P{FechaInicio} 
+and fecha_envio <  $P{FechaFin} 
+group by date(fecha_envio)]]>
 	</queryString>
-	<field name="nombre" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.label" value="nombre"/>
-		<property name="com.jaspersoft.studio.field.tree.path" value="biblioteca"/>
+	<field name="Dia de Envio" class="java.sql.Date">
+		<property name="com.jaspersoft.studio.field.label" value="Dia de Envio"/>
 	</field>
-	<field name="cantidad" class="java.lang.Long">
-		<property name="com.jaspersoft.studio.field.label" value="cantidad"/>
+	<field name="count(ticket_id)" class="java.lang.Long">
+		<property name="com.jaspersoft.studio.field.label" value="count(ticket_id)"/>
 	</field>
 	<summary>
-		<band height="240">
+		<band height="253">
 			<barChart>
 				<chart evaluationTime="Report">
-					<reportElement x="-10" y="20" width="548" height="200" uuid="5efb18de-1cb0-4d5b-b129-28c84ae0b127">
+					<reportElement x="-20" y="17" width="548" height="200" uuid="1a6d4d41-2fd9-4dfa-a5a3-308c6cf4173d">
 						<property name="net.sf.jasperreports.chart.range.axis.integer.unit" value="true"/>
 					</reportElement>
 					<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
@@ -38,19 +36,19 @@ group by B.biblioteca_id;]]>
 				<categoryDataset>
 					<dataset resetType="Report"/>
 					<categorySeries>
-						<seriesExpression><![CDATA[$F{nombre}+""]]></seriesExpression>
+						<seriesExpression><![CDATA[$F{Dia de Envio}+""]]></seriesExpression>
 						<categoryExpression><![CDATA[""]]></categoryExpression>
-						<valueExpression><![CDATA[$F{cantidad}]]></valueExpression>
-						<labelExpression><![CDATA[$F{nombre}+""]]></labelExpression>
+						<valueExpression><![CDATA[$F{count(ticket_id)}]]></valueExpression>
+						<labelExpression><![CDATA[$F{Dia de Envio}+""]]></labelExpression>
 					</categorySeries>
 				</categoryDataset>
 				<barPlot>
 					<plot>
 						<seriesColor seriesOrder="0" color="#EB636B"/>
 						<seriesColor seriesOrder="1" color="#779ECB"/>
-						<seriesColor seriesOrder="2" color="#1ABC9C"/>
-						<seriesColor seriesOrder="3" color="#E1E24C"/>
-						<seriesColor seriesOrder="4" color="#0D12D7"/>
+						<seriesColor seriesOrder="2" color="#B00EF9"/>
+						<seriesColor seriesOrder="3" color="#0D12D7"/>
+						<seriesColor seriesOrder="4" color="#E1E24C"/>
 						<seriesColor seriesOrder="5" color="#0DCB7B"/>
 						<seriesColor seriesOrder="6" color="#6A9EBF"/>
 						<seriesColor seriesOrder="7" color="#DC22FA"/>
@@ -74,11 +72,11 @@ group by B.biblioteca_id;]]>
 				</barPlot>
 			</barChart>
 			<staticText>
-				<reportElement x="-20" y="-20" width="300" height="30" uuid="1c9f0c60-7894-4960-b506-93c904723814"/>
+				<reportElement x="-20" y="-20" width="330" height="30" uuid="cdec6b80-950a-4e48-afd8-6a5e70a40d72"/>
 				<textElement>
 					<font fontName="Arial" size="12"/>
 				</textElement>
-				<text><![CDATA[Gráfico de tickets enviados, distribuidos por biblioteca: ]]></text>
+				<text><![CDATA[Gráfico de tickets enviados, distribuidos por día de envío: ]]></text>
 			</staticText>
 		</band>
 	</summary>
