--- a/tablesoft-java/JSoft/Resumen_ActivoFijo_Categoria.jrxml
+++ b/tablesoft-java/JSoft/Resumen_ActivoFijo_Categoria.jrxml
@@ -17,7 +17,7 @@ FROM (SELECT count(*) AS total_categoria
       AND fecha_envio <  $P{FechaFin}) A,
       (select count(*) as total_retrasados
        from ticket
-       where retrasado = 1  
+       where activo_fijo_id is not null  
                             AND fecha_envio > $P{FechaInicio} 
       AND fecha_envio <  $P{FechaFin} and  categoria_id = $P{Categoria_id} ) B;]]>
 	</queryString>
@@ -39,7 +39,7 @@ FROM (SELECT count(*) AS total_categoria
 				<textElement>
 					<font fontName="Arial" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Porcentaje de tickets asociados a activo fijo entre enviados: " + FIXED($F{total_retrasados}.doubleValue()/$F{total_categoria}.doubleValue()*100,2) +"%"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Porcentaje de tickets asociados a un activo fijo entre enviados: " + FIXED($F{total_retrasados}.doubleValue()/$F{total_categoria}.doubleValue()*100,2) +"%"]]></textFieldExpression>
 			</textField>
 			<subreport>
 				<reportElement x="-20" y="15" width="565" height="200" uuid="d3fa76d1-d289-4dc7-9708-6f421b0929ab"/>
