--- a/tablesoft-java/JSoft/Resumen_ActivoFijo_Urgencia.jrxml
+++ b/tablesoft-java/JSoft/Resumen_ActivoFijo_Urgencia.jrxml
@@ -5,31 +5,27 @@
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="ConexionPixies"/>
 	<parameter name="FechaInicio" class="java.sql.Timestamp"/>
 	<parameter name="FechaFin" class="java.sql.Timestamp"/>
-	<parameter name="Categoria_id" class="java.lang.Integer"/>
+	<parameter name="Urgencia_id" class="java.lang.Integer"/>
 	<parameter name="RUTA_GRAFICO" class="java.lang.String"/>
 	<queryString language="SQL">
-		<![CDATA[SELECT 
-    A.total_categoria,
-    B.total_escalados
+		<![CDATA[SELECT A.total_categoria,
+    B.total_retrasados
 FROM (SELECT count(*) AS total_categoria
       FROM ticket 
-      WHERE categoria_id = $P{Categoria_id}  
-      AND fecha_envio > $P{FechaInicio}
-      AND fecha_envio < $P{FechaFin} ) A,
-      (select count(distinct ticket_id) as total_escalados
-       from cambio_estado_ticket
-       where ticket_id in (select ticket_id 
-                           from ticket 
-                           WHERE categoria_id = $P{Categoria_id}  
-                            AND fecha_envio > $P{FechaInicio}
-      AND fecha_envio < $P{FechaFin} )
-       and estado_id_to = 5) B;]]>
+      WHERE urgencia_id = $P{Urgencia_id} 
+      AND fecha_envio > $P{FechaInicio} 
+      AND fecha_envio <  $P{FechaFin}) A,
+      (select count(*) as total_retrasados
+       from ticket
+       where activo_fijo_id is not null  
+                            AND fecha_envio > $P{FechaInicio} 
+      AND fecha_envio <  $P{FechaFin} and  urgencia_id = $P{Urgencia_id} ) B;]]>
 	</queryString>
 	<field name="total_categoria" class="java.lang.Long">
 		<property name="com.jaspersoft.studio.field.label" value="total_categoria"/>
 	</field>
-	<field name="total_escalados" class="java.lang.Long">
-		<property name="com.jaspersoft.studio.field.label" value="total_escalados"/>
+	<field name="total_retrasados" class="java.lang.Long">
+		<property name="com.jaspersoft.studio.field.label" value="total_retrasados"/>
 	</field>
 	<background>
 		<band splitType="Stretch"/>
@@ -43,21 +39,21 @@ FROM (SELECT count(*) AS total_categoria
 				<textElement>
 					<font fontName="Arial" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Porcentaje de tickets recategorizados entre enviados: " + FIXED($F{total_escalados}.doubleValue()/$F{total_categoria}.doubleValue()*100,2) +"%"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Porcentaje de tickets asociados a un activo fijo entre enviados: " + FIXED($F{total_retrasados}.doubleValue()/$F{total_categoria}.doubleValue()*100,2) +"%"]]></textFieldExpression>
 			</textField>
 			<subreport>
-				<reportElement x="-20" y="16" width="565" height="200" uuid="d3fa76d1-d289-4dc7-9708-6f421b0929ab"/>
+				<reportElement x="-20" y="15" width="565" height="200" uuid="d3fa76d1-d289-4dc7-9708-6f421b0929ab"/>
 				<subreportParameter name="FechaInicio">
 					<subreportParameterExpression><![CDATA[$P{FechaInicio}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="FechaFin">
 					<subreportParameterExpression><![CDATA[$P{FechaFin}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="Categoria_id">
-					<subreportParameterExpression><![CDATA[$P{Categoria_id}]]></subreportParameterExpression>
-				</subreportParameter>
 				<subreportParameter name="Total">
 					<subreportParameterExpression><![CDATA[$F{total_categoria}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Urgencia_id">
+					<subreportParameterExpression><![CDATA[$P{Urgencia_id}]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{RUTA_GRAFICO}]]></subreportExpression>
