--- a/tablesoft-java/JSoft/Reporte_Agente.jrxml
+++ b/tablesoft-java/JSoft/Reporte_Agente.jrxml
@@ -17,40 +17,56 @@
 	<parameter name="FechaInicio" class="java.sql.Timestamp"/>
 	<parameter name="FechaFin" class="java.sql.Timestamp"/>
 	<parameter name="RUTA_REPORTE" class="java.lang.String"/>
+	<parameter name="RUTA_GRAFICO_ESCALADOS" class="java.lang.String"/>
+	<parameter name="RUTA_GRAFICO_DEMORADOS" class="java.lang.String"/>
+	<parameter name="RUTA_GRAFICO_RECATEGORIZADOS" class="java.lang.String"/>
+	<parameter name="RUTA_RESUMEN_ESCALADOS" class="java.lang.String"/>
+	<parameter name="RUTA_RESUMEN_RECATEGORIZADOS" class="java.lang.String"/>
+	<parameter name="RUTA_RESUMEN_DEMORADOS" class="java.lang.String"/>
+	<parameter name="RUTA_TICKET_DIA" class="java.lang.String"/>
+	<parameter name="RUTA_GRAFICO_ACTIVOFIJO" class="java.lang.String"/>
+	<parameter name="RUTA_RESUMEN_ACTIVOFIJO" class="java.lang.String"/>
+	<parameter name="RUTA_TICKET_CATEGORIA" class="java.lang.String"/>
+	<parameter name="RUTA_TICKET_URGENCIA" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[select T.ticket_id
 from ticket T 
 
 
-where T.agente_id =  $P{Agente_id}  and T.fecha_envio> $P{FechaInicio} and T.fecha_envio < $P{FechaFin}  ;]]>
+where T.agente_id =  $P{Agente_id}  
+and T.fecha_envio> $P{FechaInicio} 
+and T.fecha_envio < $P{FechaFin}  ;]]>
 	</queryString>
 	<field name="ticket_id" class="java.lang.Integer">
 		<property name="com.jaspersoft.studio.field.label" value="ticket_id"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="ticket"/>
 	</field>
+	<variable name="Total" class="java.lang.Integer" calculation="Count">
+		<variableExpression><![CDATA[$F{ticket_id}]]></variableExpression>
+	</variable>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="158" splitType="Stretch">
+		<band height="146" splitType="Stretch">
 			<staticText>
-				<reportElement x="102" y="20" width="350" height="30" uuid="1239aa87-14c1-4283-94e1-680870cdaf65"/>
+				<reportElement x="120" y="20" width="318" height="30" uuid="1239aa87-14c1-4283-94e1-680870cdaf65"/>
 				<textElement>
 					<font fontName="Arial" size="22" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Reporte de tickets por agente]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="5" y="93" width="265" height="20" uuid="cc444155-2387-4fb7-b8af-fe1919c80502">
+				<reportElement x="3" y="81" width="225" height="20" uuid="cc444155-2387-4fb7-b8af-fe1919c80502">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement>
 					<font fontName="Arial" size="14"/>
 				</textElement>
-				<textFieldExpression><![CDATA["ID del agente: "  + $P{Agente_id}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["ID del Agente: "  + $P{Agente_id}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="5" y="114" width="280" height="20" uuid="a74a0698-304f-4cee-922d-401fdb5daf3b">
+				<reportElement x="3" y="102" width="280" height="20" uuid="a74a0698-304f-4cee-922d-401fdb5daf3b">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement>
@@ -59,22 +75,25 @@ where T.agente_id =  $P{Agente_id}  and T.fecha_envio> $P{FechaInicio} and T.fec
 				<textFieldExpression><![CDATA["Nombre: "  + $P{Agente_nombre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="5" y="136" width="280" height="18" uuid="869e589a-95b3-4828-b871-9d33a46f9755"/>
+				<reportElement x="3" y="124" width="467" height="18" uuid="869e589a-95b3-4828-b871-9d33a46f9755"/>
 				<textElement>
 					<font fontName="Arial" size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Código: " + $P{Agente_codigo}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="480" y="10" width="60" height="60" uuid="0fb411b9-210d-45bd-822b-32e269a1f8d2"/>
+				<reportElement x="487" y="2" width="60" height="60" uuid="0fb411b9-210d-45bd-822b-32e269a1f8d2"/>
 				<imageExpression><![CDATA[$P{IMAGEN_REPORTE}]]></imageExpression>
 			</image>
+			<line>
+				<reportElement x="0" y="70" width="555" height="1" uuid="fe3f27c3-9464-47e2-85ce-2c462c3ef8f3"/>
+			</line>
 		</band>
 	</title>
 	<detail>
 		<band height="50" splitType="Stretch">
 			<subreport>
-				<reportElement positionType="Float" x="0" y="2" width="515" height="41" uuid="483dee88-d172-49a4-bd94-209a87c6c6d0"/>
+				<reportElement positionType="Float" x="0" y="0" width="515" height="41" uuid="483dee88-d172-49a4-bd94-209a87c6c6d0"/>
 				<subreportParameter name="Ticket_id">
 					<subreportParameterExpression><![CDATA[$F{ticket_id}]]></subreportParameterExpression>
 				</subreportParameter>
@@ -101,7 +120,164 @@ where T.agente_id =  $P{Agente_id}  and T.fecha_envio> $P{FechaInicio} and T.fec
 			</subreport>
 		</band>
 	</detail>
+	<pageFooter>
+		<band height="25">
+			<textField isBlankWhenNull="false">
+				<reportElement x="434" y="10" width="80" height="13" forecolor="#000000" uuid="25533b18-6c5a-40aa-a85a-5058d1ec1d0d"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
+					<font fontName="Arial" size="10" isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report" isBlankWhenNull="false">
+				<reportElement x="515" y="10" width="40" height="13" forecolor="#000000" uuid="6eb216b8-2646-4935-ab5d-849ebad867b1"/>
+				<textElement verticalAlignment="Middle" markup="none">
+					<font fontName="Arial" size="10" isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
+				<reportElement x="2" y="11" width="197" height="13" forecolor="#000000" uuid="4b2dd62e-c289-4c6d-b8cb-e0bad8a13a53"/>
+				<textElement verticalAlignment="Middle" markup="none">
+					<font fontName="Arial" size="10" isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="0" y="6" width="555" height="1" uuid="18dbb32f-557f-412f-9613-c6ad03da62ce"/>
+			</line>
+		</band>
+	</pageFooter>
 	<summary>
-		<band height="39" splitType="Stretch"/>
+		<band height="561" splitType="Stretch">
+			<textField>
+				<reportElement x="0" y="12" width="160" height="20" uuid="59bb36b9-9bf4-4aa3-998d-317aeacf8a1a">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<textElement>
+					<font fontName="Arial" size="14" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Resumen: "]]></textFieldExpression>
+			</textField>
+			<subreport>
+				<reportElement positionType="Float" x="0" y="65" width="550" height="68" uuid="5f753364-9365-4838-a6af-80fb0a85d29f"/>
+				<subreportParameter name="FechaInicio">
+					<subreportParameterExpression><![CDATA[$P{FechaInicio}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="FechaFin">
+					<subreportParameterExpression><![CDATA[$P{FechaFin}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Agente_id">
+					<subreportParameterExpression><![CDATA[$P{Agente_id}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="RUTA_GRAFICO">
+					<subreportParameterExpression><![CDATA[$P{RUTA_GRAFICO_ESCALADOS}]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{RUTA_RESUMEN_ESCALADOS}]]></subreportExpression>
+			</subreport>
+			<subreport>
+				<reportElement positionType="Float" x="0" y="195" width="550" height="70" uuid="c158f47b-1a74-4bc5-8323-29e0f80ed704"/>
+				<subreportParameter name="FechaInicio">
+					<subreportParameterExpression><![CDATA[$P{FechaInicio}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="FechaFin">
+					<subreportParameterExpression><![CDATA[$P{FechaFin}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Agente_id">
+					<subreportParameterExpression><![CDATA[$P{Agente_id}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="RUTA_GRAFICO">
+					<subreportParameterExpression><![CDATA[$P{RUTA_GRAFICO_DEMORADOS}]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{RUTA_RESUMEN_DEMORADOS}]]></subreportExpression>
+			</subreport>
+			<subreport>
+				<reportElement positionType="Float" x="0" y="133" width="550" height="60" uuid="a83f1b76-d765-4786-9f28-1c7ddfcd5bdf"/>
+				<subreportParameter name="FechaInicio">
+					<subreportParameterExpression><![CDATA[$P{FechaInicio}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="FechaFin">
+					<subreportParameterExpression><![CDATA[$P{FechaFin}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Agente_id">
+					<subreportParameterExpression><![CDATA[$P{Agente_id}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="RUTA_GRAFICO">
+					<subreportParameterExpression><![CDATA[$P{RUTA_GRAFICO_RECATEGORIZADOS}]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{RUTA_RESUMEN_RECATEGORIZADOS}]]></subreportExpression>
+			</subreport>
+			<subreport>
+				<reportElement positionType="Float" x="0" y="341" width="550" height="55" uuid="9f4a2c5f-27f3-49cc-b114-406dc0d42c81"/>
+				<subreportParameter name="FechaInicio">
+					<subreportParameterExpression><![CDATA[$P{FechaInicio}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="FechaFin">
+					<subreportParameterExpression><![CDATA[$P{FechaFin}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Agente_id">
+					<subreportParameterExpression><![CDATA[$P{Agente_id}]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{RUTA_TICKET_DIA}]]></subreportExpression>
+			</subreport>
+			<textField>
+				<reportElement x="0" y="44" width="270" height="20" uuid="5fecd3f2-d8cc-46cb-b401-29edbee1dd24">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<textElement>
+					<font fontName="Arial" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Cantidad de tickets enviados:  "  + $V{Total}]]></textFieldExpression>
+			</textField>
+			<subreport>
+				<reportElement positionType="Float" x="0" y="396" width="550" height="60" uuid="eb83e028-9a2f-49f2-a954-673d1d69d84c"/>
+				<subreportParameter name="FechaInicio">
+					<subreportParameterExpression><![CDATA[$P{FechaInicio}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="FechaFin">
+					<subreportParameterExpression><![CDATA[$P{FechaFin}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Agente_id">
+					<subreportParameterExpression><![CDATA[$P{Agente_id}]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{RUTA_TICKET_CATEGORIA}]]></subreportExpression>
+			</subreport>
+			<subreport>
+				<reportElement positionType="Float" x="-1" y="266" width="551" height="70" uuid="f7dd559a-5f60-4617-a8b5-2ec0a0588384"/>
+				<subreportParameter name="FechaInicio">
+					<subreportParameterExpression><![CDATA[$P{FechaInicio}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="FechaFin">
+					<subreportParameterExpression><![CDATA[$P{FechaFin}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Agente_id">
+					<subreportParameterExpression><![CDATA[$P{Agente_id}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="RUTA_GRAFICO">
+					<subreportParameterExpression><![CDATA[$P{RUTA_GRAFICO_ACTIVOFIJO}]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{RUTA_RESUMEN_ACTIVOFIJO}]]></subreportExpression>
+			</subreport>
+			<subreport>
+				<reportElement positionType="Float" x="-1" y="460" width="551" height="80" uuid="2adb3c99-fd6f-4f0a-83c7-2558dbc012f4"/>
+				<subreportParameter name="FechaInicio">
+					<subreportParameterExpression><![CDATA[$P{FechaInicio}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="FechaFin">
+					<subreportParameterExpression><![CDATA[$P{FechaFin}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Agente_id">
+					<subreportParameterExpression><![CDATA[$P{Agente_id}]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{RUTA_TICKET_URGENCIA}]]></subreportExpression>
+			</subreport>
+		</band>
 	</summary>
 </jasperReport>
