--- a/tablesoft-java/JSoft/Grafico_Tickets_Agente_Equipo.jrxml
+++ b/tablesoft-java/JSoft/Grafico_Tickets_Agente_Equipo.jrxml
@@ -7,27 +7,30 @@
 	<parameter name="FechaFin" class="java.sql.Timestamp"/>
 	<parameter name="Equipo_id" class="java.lang.Integer"/>
 	<queryString>
-		<![CDATA[select date(fecha_envio) as "Dia de Envio",
-    count(ticket_id)
+		<![CDATA[select CONCAT(P.nombre, ' ', P.apellido_paterno, ' ',P.apellido_materno , " (" , P.codigo, ')') as nombre, count(T.ticket_id) as cantidad
 from ticket T
 inner join agente A
-on T.agente_id = A.agente_id	
-where A.equipo_id = $P{Equipo_id} 
-and T.fecha_envio > $P{FechaInicio} 
-and T.fecha_envio <  $P{FechaFin} 
-group by date(fecha_envio)]]>
+on T.agente_id = A.agente_id
+inner join persona P 
+on P.codigo = A.codigo
+inner join equipo E 
+on E.equipo_id = A.equipo_id
+where T.fecha_envio >  $P{FechaInicio} 
+and T.fecha_envio < $P{FechaFin} 
+and E.equipo_id = $P{Equipo_id} 
+group by A.agente_id;]]>
 	</queryString>
-	<field name="Dia de Envio" class="java.sql.Date">
-		<property name="com.jaspersoft.studio.field.label" value="Dia de Envio"/>
+	<field name="nombre" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="nombre"/>
 	</field>
-	<field name="count(ticket_id)" class="java.lang.Long">
-		<property name="com.jaspersoft.studio.field.label" value="count(ticket_id)"/>
+	<field name="cantidad" class="java.lang.Long">
+		<property name="com.jaspersoft.studio.field.label" value="cantidad"/>
 	</field>
 	<summary>
-		<band height="253">
+		<band height="240">
 			<barChart>
 				<chart evaluationTime="Report">
-					<reportElement x="-20" y="17" width="548" height="200" uuid="1a6d4d41-2fd9-4dfa-a5a3-308c6cf4173d">
+					<reportElement x="-10" y="20" width="548" height="200" uuid="2b839c20-d70e-4a5e-9a08-63bba2296fdb">
 						<property name="net.sf.jasperreports.chart.range.axis.integer.unit" value="true"/>
 					</reportElement>
 					<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
@@ -38,19 +41,19 @@ group by date(fecha_envio)]]>
 				<categoryDataset>
 					<dataset resetType="Report"/>
 					<categorySeries>
-						<seriesExpression><![CDATA[$F{Dia de Envio}+""]]></seriesExpression>
+						<seriesExpression><![CDATA[$F{nombre}]]></seriesExpression>
 						<categoryExpression><![CDATA[""]]></categoryExpression>
-						<valueExpression><![CDATA[$F{count(ticket_id)}]]></valueExpression>
-						<labelExpression><![CDATA[$F{Dia de Envio}+""]]></labelExpression>
+						<valueExpression><![CDATA[$F{cantidad}]]></valueExpression>
+						<labelExpression><![CDATA[$F{nombre}]]></labelExpression>
 					</categorySeries>
 				</categoryDataset>
 				<barPlot>
 					<plot>
 						<seriesColor seriesOrder="0" color="#EB636B"/>
 						<seriesColor seriesOrder="1" color="#779ECB"/>
-						<seriesColor seriesOrder="2" color="#B00EF9"/>
-						<seriesColor seriesOrder="3" color="#0D12D7"/>
-						<seriesColor seriesOrder="4" color="#E1E24C"/>
+						<seriesColor seriesOrder="2" color="#1ABC9C"/>
+						<seriesColor seriesOrder="3" color="#E1E24C"/>
+						<seriesColor seriesOrder="4" color="#0D12D7"/>
 						<seriesColor seriesOrder="5" color="#0DCB7B"/>
 						<seriesColor seriesOrder="6" color="#6A9EBF"/>
 						<seriesColor seriesOrder="7" color="#DC22FA"/>
@@ -74,11 +77,11 @@ group by date(fecha_envio)]]>
 				</barPlot>
 			</barChart>
 			<staticText>
-				<reportElement x="-20" y="-20" width="330" height="30" uuid="cdec6b80-950a-4e48-afd8-6a5e70a40d72"/>
+				<reportElement x="-20" y="-20" width="490" height="30" uuid="1c9f0c60-7894-4960-b506-93c904723814"/>
 				<textElement>
 					<font fontName="Arial" size="12"/>
 				</textElement>
-				<text><![CDATA[Gráfico de tickets enviados, distribuidos por día de envío: ]]></text>
+				<text><![CDATA[Gráfico de tickets enviados, distribuidos por agente responsable de su atención: ]]></text>
 			</staticText>
 		</band>
 	</summary>
